src/tests/valid_programs/prog2.sdw
GRANJA
SEMILLA X := 10;
SEMILLA y :=20;
SEMILLA SUMA := x + y;
MOSTRAR suma;
CIERRE