src/tests/invalid_programs/error3.sdw
GRANJA
SEMILLA a := 10;
MOSTRAR a;